--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "9.1.7",
     "@angular/platform-server": "9.1.7",
     "@angular/router": "9.1.7",
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@nguniversal/module-map-ngfactory-loader": "7.1.1",
+    "font-awesome": "^4.7.0",
     "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
