--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,11 @@ trim_trailing_whitespace = true
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+
+[*.cs]
+indent_style = tab
+indent_size = 4
+
+[*.sql]
+indent_style = tab
+indent_size = 4
