Insert new recipe using stored procedures

--- a/api/WebApplication1/WebApplication1/appsettings.json
+++ b/api/WebApplication1/WebApplication1/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "myConnection": "Server=DESKTOP-JGO467Q\\SQLEXPRESS;Database=Recipes;Trusted_Connection=True;"
+  }
 }
